# kong-init

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml
ci/: before_deploy.sh  script.sh
dev/: docker-compose-kong13.yml  docker-compose-kong14.yml
example/: Dockerfile  kong11.yaml  kong14.v2.yaml
route-tmpl/: kong11.yaml  kong14.yaml
src/: client.rs  entity.rs  main.rs
