[package]
name = "kong-init"
version = "0.8.0-rc-2"
keywords = ["kong", "api-gateway", "client"]
authors = ["liyuntao <liyuntao58607@163.com>"]

[dependencies]
clap = "2.32.0"
http = "0.1"
log = "0.4"
pretty_env_logger = "0.2"
regex = "1.0.5"
reqwest = "0.9"
semver = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"

[profile.release]
panic = 'abort'